@@ -727,7 +727,7 @@
           self.updateCharts();
         })
         .error(function (e) {
-          console.log('stat fetch req error:' + e);
+          arangoHelper.arangoError('Statistics', 'stat fetch req error:' + JSON.stringify(e));
         });
     },
 
@@ -1088,7 +1088,29 @@
 
     template: templateEngine.createTemplate('dashboardView.ejs'),
 
+    checkEnabledStatistics: function () {
+      if (!frontendConfig.statisticsEnabled || frontendConfig.db !== '_system') {
+        $(this.el).html('');
+        if (this.server) {
+          $(this.el).append(
+            '<div style="color: red">Server statistics (' + this.server + ') are disabled.</div>'
+          );
+        } else {
+          $(this.el).append(
+            '<div style="color: red">Server statistics are disabled.</div>'
+          );
+        }
+        return false;
+      } else {
+        return true;
+      }
+    },
+
     render: function (modalView) {
+      if (!this.checkEnabledStatistics()) {
+        return;
+      }
+
       if (this.serverInfo === undefined) {
         this.serverInfo = {
           isDBServer: false
@@ -1102,20 +1124,6 @@
               hideStatistics: false
             }));
             this.getNodeInfo();
-          }
-
-          if (!enabled || frontendConfig.db !== '_system') {
-            $(this.el).html('');
-            if (this.server) {
-              $(this.el).append(
-                '<div style="color: red">Server statistics (' + this.server + ') are disabled.</div>'
-              );
-            } else {
-              $(this.el).append(
-                '<div style="color: red">Server statistics are disabled.</div>'
-              );
-            }
-            return;
           }
 
           this.prepareDygraphs();
