@@ -1,6 +1,9 @@
 devel
 -----
 
+* Web UI now checks if server statistics are enabled before it sends its first
+  request to the statistics API
+
 * disable in-memory cache for edge and traversal data on agency nodes, as it
   is not needed there
 
